force-app/main/default/objects/Case/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <type>TextArea</type>
</CustomField>