force-app/main/default/objects/Case/fields/Shelter__c.field-meta.xml
<CustomField>
    <fullName>Shelter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shelter</label>
    <referenceTo>Shelter__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>